--- a/src/MobileApps/MyDriving/MyDriving.UITests/MyDriving.UITests.csproj
+++ b/src/MobileApps/MyDriving/MyDriving.UITests/MyDriving.UITests.csproj
@@ -41,6 +41,9 @@
     <Reference Include="Xamarin.UITest">
       <HintPath>..\..\packages\Xamarin.UITest.2.2.3\lib\net45\Xamarin.UITest.dll</HintPath>
     </Reference>
+    <Reference Include="nunit.framework">
+      <HintPath>..\..\packages\NUnit.2.6.4\lib\nunit.framework.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AppInitializer.cs" />
