Try to enable geolocation

--- a/src/MobileApps/MyDriving/MyDriving.iOS/Info.plist
+++ b/src/MobileApps/MyDriving/MyDriving.iOS/Info.plist
@@ -60,5 +60,16 @@
 	</dict>
 	<key>CFBundleName</key>
 	<string>MyDriving</string>
+	<key>CFBundleDocumentTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeName</key>
+			<string>MKDirectionsRequest</string>
+			<key>LSItemContentTypes</key>
+			<array>
+				<string>com.apple.maps.directionsrequest</string>
+			</array>
+		</dict>
+	</array>
 </dict>
 </plist>
